# demo-docs

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.md
docs/source/api_reference/: api_quick_reference.md  index.md
docs/source/user_guide/: index.md
examples/: actuator.py  body.py  custom_ui.py  empty.py  falling_ball.py  friction.py  gizmos.py  go1.py  gyroscope.py  gyroscope_zero_gravity.py  hello_motrixsim.py  joint.py  link.py  load_from_str.py  local_arm.py  model.py  mouse_click.py  newton_cradle.py  options.py  read_keyboard.py  robotic_arm.py  site_and_sensor.py  slope.py  spot.py
examples/assets/: actuator.xml  body.xml  empty.xml  falling_ball.xml  friction.xml  gyroscope.xml  gyroscope_zero_gravity.xml  joint.xml  keyboard_car.xml  link.xml  local_arm.xml  model.xml  mouse_click.xml  newton_cradle_mj.xml  newton_cradle_mt.xml  options.xml  site_and_sensor.xml  slope.xml
examples/assets/boston_dynamics_spot/: LICENSE  scene.xml  scene_arm.xml  spot.xml  spot_arm.xml
examples/assets/go1/: go1_mjx_fullcollisions.xml  go1_policy.onnx  scene.xml
examples/assets/stanford_tidybot/: LICENSE  base.xml  scene.xml  scene_base.xml  tidybot.xml
examples/assets/store/: scene.xml  store.xml
examples/mujoco/: gyroscope.py  gyroscope_zero_gravity.py  newton_cradle.py
legged_gym/: addr.py
legged_gym/envs/: __init__.py
legged_gym/envs/T1/: T1.py  T1_config.py
legged_gym/scripts/: T1_play.py  __init__.py  go1_play.py
legged_gym/utils/: __init__.py  runner.py  task_registry.py
(+104 files in other folders)
