[project]
name = "motrixsim-python-sdk-example"
version = "0.1.0"
description = "A high-performance physics simulation engine designed for multibody dynamics and robotics simulation."
authors = [
    { name = "Motphys", email = "developers@motphys.com" },
]
dependencies = [
    "motrixsim",
]
requires-python = "==3.10.*"
readme = "README.md"
license = "Apache-2.0"

[project.optional-dependencies]
docs = [
    "motrixsim[docs]",
]
example = [
    "motrixsim[demo,mujoco_demo]",
]